Update handlers package to use the term namespace instead of package
