# main.go
@@ -31,65 +31,65 @@ var ReadRoutes = map[string]http.HandlerFunc{
 	"/":       HomeHandler,
 	"/health": handlers.HealthCheckHandler,
 
-	"/api/v1/inventory/":                                                           handlers.GetProjectsHandler,
-	"/api/v1/inventory/{project}/":                                                 handlers.GetProjectHandler,
-	"/api/v1/inventory/{project}/hooks/":                                           handlers.GetProjectHooksHandler,
-	"/api/v1/inventory/{project}/units/":                                           handlers.GetApplicationsHandler,
-	"/api/v1/inventory/{project}/units/{name}/":                                    handlers.GetApplicationHandler,
-	"/api/v1/inventory/{project}/units/{name}/hooks/":                              handlers.GetApplicationHooksHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/":                           handlers.GetApplicationVersionsHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/":                 handlers.GetVersionHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/downstream":       handlers.DownstreamHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/dependency-graph": handlers.DependencyGraphHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/diff/":            handlers.DiffHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/diff/{diffWith}/": handlers.DiffHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/download":         handlers.DownloadHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/previous/":        handlers.PreviousVersionHandler,
-	"/api/v1/inventory/{project}/units/{name}/next-version":                        handlers.NextVersionHandler,
-	"/api/v1/inventory/__providers":                                                handlers.ProviderHandler,
+	"/api/v1/inventory/":                                                             handlers.GetNamespacesHandler,
+	"/api/v1/inventory/{namespace}/":                                                 handlers.GetNamespaceHandler,
+	"/api/v1/inventory/{namespace}/hooks/":                                           handlers.GetNamespaceHooksHandler,
+	"/api/v1/inventory/{namespace}/units/":                                           handlers.GetApplicationsHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/":                                    handlers.GetApplicationHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/hooks/":                              handlers.GetApplicationHooksHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/":                           handlers.GetApplicationVersionsHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/":                 handlers.GetVersionHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/downstream":       handlers.DownstreamHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/dependency-graph": handlers.DependencyGraphHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/diff/":            handlers.DiffHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/diff/{diffWith}/": handlers.DiffHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/download":         handlers.DownloadHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/previous/":        handlers.PreviousVersionHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/next-version":                        handlers.NextVersionHandler,
+	"/api/v1/inventory/__providers":                                                  handlers.ProviderHandler,
 
 	/* DEPRECATED HANDLERS */
-	"/api/v1/registry/":                                                           handlers.GetProjectsHandler,
-	"/api/v1/registry/{project}/":                                                 handlers.GetProjectHandler,
-	"/api/v1/registry/{project}/hooks/":                                           handlers.GetProjectHooksHandler,
-	"/api/v1/registry/{project}/units/":                                           handlers.GetApplicationsHandler,
-	"/api/v1/registry/{project}/units/{name}/":                                    handlers.GetApplicationHandler,
-	"/api/v1/registry/{project}/units/{name}/hooks/":                              handlers.GetApplicationHooksHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/":                           handlers.GetApplicationVersionsHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/":                 handlers.GetVersionHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/downstream":       handlers.DownstreamHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/dependency-graph": handlers.DependencyGraphHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/diff/":            handlers.DiffHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/diff/{diffWith}/": handlers.DiffHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/download":         handlers.DownloadHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/previous/":        handlers.PreviousVersionHandler,
-	"/api/v1/registry/{project}/units/{name}/next-version":                        handlers.NextVersionHandler,
+	"/api/v1/registry/":                                                             handlers.GetNamespacesHandler,
+	"/api/v1/registry/{namespace}/":                                                 handlers.GetNamespaceHandler,
+	"/api/v1/registry/{namespace}/hooks/":                                           handlers.GetNamespaceHooksHandler,
+	"/api/v1/registry/{namespace}/units/":                                           handlers.GetApplicationsHandler,
+	"/api/v1/registry/{namespace}/units/{name}/":                                    handlers.GetApplicationHandler,
+	"/api/v1/registry/{namespace}/units/{name}/hooks/":                              handlers.GetApplicationHooksHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/":                           handlers.GetApplicationVersionsHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/":                 handlers.GetVersionHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/downstream":       handlers.DownstreamHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/dependency-graph": handlers.DependencyGraphHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/diff/":            handlers.DiffHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/diff/{diffWith}/": handlers.DiffHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/download":         handlers.DownloadHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/previous/":        handlers.PreviousVersionHandler,
+	"/api/v1/registry/{namespace}/units/{name}/next-version":                        handlers.NextVersionHandler,
 }
 
 var DeleteRoutes = map[string]http.HandlerFunc{
-	"/api/v1/inventory/{project}/hard-delete": handlers.HardDeleteProjectHandler,
+	"/api/v1/inventory/{namespace}/hard-delete": handlers.HardDeleteNamespaceHandler,
 }
 
 var WriteRoutes = map[string]http.HandlerFunc{
-	"/api/v1/inventory/{project}/add-project":                            handlers.AddProjectHandler,
-	"/api/v1/inventory/{project}/register":                               handlers.RegisterHandler,
-	"/api/v1/inventory/{project}/units/{name}/versions/{version}/upload": handlers.UploadHandler,
+	"/api/v1/inventory/{namespace}/add-namespace":                          handlers.AddNamespaceHandler,
+	"/api/v1/inventory/{namespace}/register":                               handlers.RegisterHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/versions/{version}/upload": handlers.UploadHandler,
 
 	/* DEPRECATED HANDLERS */
-	"/api/v1/registry/{project}/add-project":                            handlers.AddProjectHandler,
-	"/api/v1/registry/{project}/register":                               handlers.RegisterHandler,
-	"/api/v1/registry/{project}/units/{name}/versions/{version}/upload": handlers.UploadHandler,
+	"/api/v1/registry/{namespace}/add-namespace":                          handlers.AddNamespaceHandler,
+	"/api/v1/registry/{namespace}/register":                               handlers.RegisterHandler,
+	"/api/v1/registry/{namespace}/units/{name}/versions/{version}/upload": handlers.UploadHandler,
 }
 
 var UpdateRoutes = map[string]http.HandlerFunc{
-	"/api/v1/inventory/{project}/":                    handlers.UpdateProjectHandler,
-	"/api/v1/inventory/{project}/hooks/":              handlers.UpdateProjectHooksHandler,
-	"/api/v1/inventory/{project}/units/{name}/hooks/": handlers.UpdateApplicationHooksHandler,
+	"/api/v1/inventory/{namespace}/":                    handlers.UpdateNamespaceHandler,
+	"/api/v1/inventory/{namespace}/hooks/":              handlers.UpdateNamespaceHooksHandler,
+	"/api/v1/inventory/{namespace}/units/{name}/hooks/": handlers.UpdateApplicationHooksHandler,
 
 	/* DEPRECATED HANDLERS */
-	"/api/v1/registry/{project}/":                    handlers.UpdateProjectHandler,
-	"/api/v1/registry/{project}/hooks/":              handlers.UpdateProjectHooksHandler,
-	"/api/v1/registry/{project}/units/{name}/hooks/": handlers.UpdateApplicationHooksHandler,
+	"/api/v1/registry/{namespace}/":                    handlers.UpdateNamespaceHandler,
+	"/api/v1/registry/{namespace}/hooks/":              handlers.UpdateNamespaceHooksHandler,
+	"/api/v1/registry/{namespace}/units/{name}/hooks/": handlers.UpdateApplicationHooksHandler,
 }
 
 var DevRoutes = map[string]map[string]http.HandlerFunc{
